<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name_new">NearNotes</string>
    <string name="title">NearNotes</string>

    <!-- All Notes Strings -->
    <string name="no_notes">No Notes Yet - To add a note, press the + button</string>
    <string name="spacer">&#160;-&#160;</string>
    <string name="new_tooltip">New Note</string>
    <string name="refresh_tooltip">Refresh Location</string>

    <!-- Note Edit Strings -->
    <!-- Action Bar -->
    <string name="menu">Menu</string>
    <string name="done">Done</string>
    <string name="togglechecklist">Toggle Checklist</string>
    <string name="clearnote">Clear Note</string>
    <string name="deletenote">Delete Note</string>
    <string name="sharenote">Share Note</string>
    <string name="titles">Title:</string>

    <string-array name="role_array">
        <item>None</item>
        <item>Viewer</item>
        <item>Editor</item>
    </string-array>

    <!-- End Action Bar -->
    <string name="edit_note">NearNotes</string>
    <string name="location">Location:</string>
    <string name="location_icon_desc">location icon</string>
    <string name="on_top">Keep on top</string>
    <string name="body">Notes:</string>
    <string name="enter_notes">Enter Notes</string>
    <string name="enter_location">Enter Location</string>
    <string name="enter_title">(Optional)</string>

    <!-- Contextual Action Bar -->
    <string name="cab_select_all">select all</string>
    <string name="cab_delete">delete</string>
    
    <!-- Datastore Deleted Dialog -->
    <string name="datastore_deleted_title">Note unshared by owner</string>
    <string name="datastore_deleted_delete">Delete Note</string>
    <string name="datastore_deleted_keep">Keep local copy</string>

    <!-- Location Dialog -->
    <string name="dialog_location_finding_note_network">Finding Nearest Note (Network)..</string>
    <string name="dialog_location_updating_note_network">Updating Location (Network)..</string>
    <string name="dialog_location_use_network">Use network location</string>
    <string name="dialog_location_no_location_services_title">No Location Services Enabled</string>
    <string name="dialog_location_no_location_services_message">Please enable location services to use the functionality of this app</string>
    <string name="dialog_location_finding_note_gps">Finding Nearest Note (GPS)..</string>
    <string name="dialog_location_updating_note_gps">Updating Location (GPS)..</string>
    <string name="dialog_location_only_gps_message">GPS is the only location service enabled. Click settings to enable other location services</string>
    <string name="dialog_location_button_settings">Change location settings</string>

    <!-- Settings Page Strings -->
    <string name="pref_location_title">Location Settings</string>
    <string name="pref_title_ignore_gps">Use GPS</string>
    <string name="pref_summary_ignore_gps">Use GPS to determine location. Note: GPS uses more battery life and does not work indoors. Recommended to be disabled.</string>
    <string name="pref_note_title">Note Settings</string>
    <string name="pref_title_note_checklist">Use a checklist for a new note</string>
    <string name="pref_summary_note_checklist">By default use a checklist when starting a new note</string>
    <string name="pref_checklist_title">Checklist Settings</string>
    <string name="pref_title_checklist_default">Checklist finished - default action</string>
    <string name="pref_summary_checklist_default">Use a default action when all items are checked</string>
    <string name="pref_checklist_finished">\t \t Choose your default action</string>

    <string-array name="check_array_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Checklist finished dialog -->
    <string name="checkfinished">Checklist Finished</string>

    <string-array name="check_array">
        <item>Clear Note</item>
        <item>Delete Note</item>
        <item>Do Nothing</item>
    </string-array>

    <string name="alwayscheck">Always do this</string>
    <string name="oncecheck">Just Once</string>

    <!-- Generic String -->
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <!-- Automatic checklist finished dialog -->
    <string name="checkfinished_clearnote">Clear Note?</string>
    <string name="checkfinished_deletenote">Delete Note?</string>
    <string name="checkfinished_message">To change default action click settings.</string>
    <string name="dialog_checklist_settings">Settings</string>

    <!-- Drawer Menu Array -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="drawer_menu_array">
        <item>Nearest Note</item>
        <item>All Notes</item>
        <item>Sync Dropbox</item>
        <item>Settings</item>
        <item>Help</item>
    </string-array>

    <string name="sync_dropbox">Sync your notes with Dropbox</string>

    <!-- Overflow Menu strings -->
    <string name="check_clear">Are you sure you want to clear note?</string>
    <string name="check_delete">Are you sure you want to delete?</string>
    <string name="check_not_saved">Cannot delete - Note has not been saved yet</string>

    <!-- Text color for actionbar theme -->
    <color name="actionbar_text">#FFF</color>

    <!-- Background color for theme -->
    <color name="backgroundDefault">#FFFFB2</color>

    <!-- Location Autocomplete text color -->
    <color name="deepred">#B30000</color>
    <color name="deepgreen">#008714</color>
    
    <!-- Help Page Text -->
    <string name="help_adding_note_title">Adding a Note</string>
    <string name="help_adding_note_body">To add a note, tap the plus symbol on the All Notes screen. Enter a location for your note in the location field and select from the dropdown box. Enter a body and title (optional), then tap the \"tick\" icon in the top right hand corner when finished to save the note.</string>
	
     <string name="help_deleting_note_title">Deleting a Note</string>
     <string name="help_deleting_note_body">To delete a note while a note is open, tap the menu icon in the top right then tap delete note then OK. To do multiple deletions go to the All Notes screen and long press on a note. This will bring up the deletion action bar, tap on all the notes you would like to delete then tap the trash icon at the top right. If you want to select all, press the select all button next to the trash icon.</string>
    
     <string name="help_sync_notes_title">Syncing Notes with Dropbox</string>
     <string name="help_sync_notes_body">To Sync and backup your notes using dropbox tap Sync Dropbox in the slide menu. This will bring up a Dropbox login and you will need a dropbox account to continue. Login and tap allow and you will be returned to the All Notes screen with your synced notes. An internet connection is required for this functionality but you are able to view and edit your notes offline. Once completed you can sync your notes across multiple devices by logging in with the same Dropbox account.</string>
         	
     <string name="help_share_notes_title">Sharing Notes with Dropbox</string>	
     <string name="help_share_notes_body">To share a note after setting up syncing with Dropbox open the note you want to share and tap the menu button in the top right then tap Share Note. Now anyone who has the link to that note is able to view and edit your note. To share to another person press share via another application to send via text message, skype, email etc or copy to clipboard to do it yourself. If the recipient has NearNotes they can simply open the link with NearNotes on their phone or if they don\'t they can edit and view the note in any web browser. To unshare, open the shared note and tap menu then Manage Share and tap unshare in the dialog.</string>
    
</resources>