<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFB2" >

    <PreferenceCategory
        android:key="pref_key_storage_settings"
        android:title="@string/pref_location_title" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_ignore_gps"
            android:summary="@string/pref_summary_ignore_gps"
            android:title="@string/pref_title_ignore_gps" />
    </PreferenceCategory>
    
    <PreferenceCategory
        android:key="pref_key_checklist_settings"
        android:title="@string/pref_checklist_title" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="pref_key_use_checklist_default"
            android:summary="@string/pref_summary_checklist_default"
            android:title="@string/pref_title_checklist_default" />
        
        <ListPreference
            android:title="@string/pref_checklist_finished"
            android:key="pref_key_checklist_listPref"
            android:defaultValue="2"
            android:entries="@array/check_array"
            android:entryValues="@array/check_array_values" />
    </PreferenceCategory>

</PreferenceScreen>