<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_location"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="always|withText"
        android:title="@string/refresh_tooltip"/>
    <item
        android:id="@+id/action_new"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/new_tooltip"/>
    <item
        android:id="@+id/action_done"
        android:icon="@drawable/ic_action_done"
        android:showAsAction="always"
        android:title="@string/done"/>
    <item
        android:id="@+id/action_overflow"
        android:actionViewClass="ShareActionProvider"
        android:icon="@drawable/ic_action_overflow"
        android:showAsAction="always"
        android:title="@string/menu">
        <menu>
             <item android:id="@+id/item1" android:title="Toggle Checklist"></item>
             <item android:id="@+id/item2" android:title="Clear Note"></item>
             <item android:id="@+id/item3" android:title="Delete Note"></item>
        </menu>
    </item>

</menu>