<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFB2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:paddingTop="10dip"
            android:text="@string/location" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal" >

            <CheckBox
                android:id="@+id/checkbox_on_top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dip"
                android:text="@string/on_top"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/location_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:contentDescription="@string/location_icon_desc"
            android:src="@drawable/ic_action_place" />

        <ProgressBar
            android:id="@+id/progressAPI"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dip"
            android:layout_height="32dip"
            android:visibility="gone" />

        <com.nearnotes.DelayAutoCompleteTextView
            android:id="@+id/autoCompleteTextView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ellipsize="end"
            android:ems="10"
            android:singleLine="true" >
        </com.nearnotes.DelayAutoCompleteTextView>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:text="@string/body" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background" >

        <EditText
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:paddingLeft="5dip"
            android:paddingRight="5dip"
            android:scrollbars="vertical" />
    </ScrollView>

</LinearLayout>